# core

./: CMakeLists.txt  README.md
include/core/: amxx_access.h  console.h  cvar.h  delegate.h  localization.h  menu.h  messages.h  observer.h  regamedll_api.h  rehlds_api.h  reunion_api.h  strings.h  system.h  type_conversion.h  type_traits.h
include/core/strings/: caseconv.h  compare.h  consts.h  examination.h  format.h  mutation.h  path.h  trim.h
src/: amxx_access.cpp  cvar.cpp  localization.cpp  menu.cpp  messages.cpp  regamedll_api.cpp  rehlds_api.cpp  reunion_api.cpp  type_conversion.cpp
src/strings/: examination.cpp  mutation.cpp  path.cpp
